# RAG_Course

./: .gitignore  README.md  pyproject.toml  requirements.txt
0-DataIngestion_Persing/: 1-data_ingestion.ipynb  2-data_parsing_pdf.ipynb
1.Data_Ingest_Parsing/: 1-data_ingestion.ipynb  2-data_parsing_pdf.ipynb  3-data_parsing_doc.ipynb  4-data_parsing_csv_excel.ipynb  5-data_parsing_json.ipynb  6-data_parsing_database.ipynb
1.Data_Ingest_Parsing/data/databases/: company.db
1.Data_Ingest_Parsing/data/structured_files/: inventory.xlsx
10.Agentic_RAG/: 1.Agentic_RAG.ipynb  2.Agentic_RAG.ipynb
11.Autonomous_RAG/: 1.COTRag.ipynb  2.self_reflection.ipynb  3.Query_Planning_Decomposition.ipynb  4.Iterative_Retrival.ipynb  5.Answer_Synthesis.ipynb  research_notes.txt
12.MultiAgent_RAG/: multiagents.ipynb
13.C_RAG/: corrective_RAG.ipynb
14.Adaptive_RAG/: adaptive_rag.ipynb
15.RAG_with_persistant_memory/: rag_memory.ipynb
16.Cache_with_RAG/: cache_rag.ipynb
2.Vector_Embedding/: 1-embeddings.ipynb  2-openai_gemini_embeddings.ipynb
3.VectoreStore_n_VectoreDb/: 1-chromadb.ipynb  2-faiss.ipynb  25 - 1-chromadb.ipynb  3-pineconeDb.ipynb
4.Advanced_Chunking/: 1-semantic_chunking.ipynb
5.Hybrid_Search_Strategies/: 1.dense_sparse.ipynb  2.reranking.ipynb  3.mmr.ipynb
6.Query_Enhancement/: 1.query_expansion.ipynb
7.Multimodal_RAG/: 1.multimodal_rag.ipynb
8.Langgraph_Basics/: 1.simple_graph.ipynb  2.simple_chatbot.ipynb  3.dataclass_schema.ipynb  4.chaining_tool.ipynb  5.chain_multiple_tools.ipynb
9.ReAct_Agent/: 1.ReAct_Agents.ipynb
