[project]
name = "rag-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.24.2",
    "google-api-python-client==2.170.0",
    "google-auth==2.40.2",
    "google-auth-httplib2==0.2.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.70.0",
    "ipykernel>=6.30.1",
    "jq>=1.10.0",
    "langchain==0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core==0.3.62",
    "langchain-google-genai==2.0.10",
    "langchain-huggingface>=0.2.0",
    "langchain-openai>=0.3.18",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.7",
    "langgraph-checkpoint==2.0.26",
    "langgraph-prebuilt==0.2.1",
    "langgraph-sdk==0.1.70",
    "langsmith==0.3.42",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.14",
]
